--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -20,7 +20,8 @@
         <div class="fhm_row">
           <a ng-href="#/appmam/galeria">
             <div class="fhm_item">
-              Galeria
+            <img src="img/galeria.png" class="teste">
+                Galeria
             </div>
           </a>
 
